--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "email-validator-pro",
-  "description": "...",
+  "description": "Validates an email address against most RFC standards.",
   "main": "dist/EmailValidatorPro.js",
   "scripts": {
-    "prepublish": "npm run dist -s",
+    "prepare": "npm run dist -s",
     "dist": "npm run lint -s && npm run babel -s && npm run minify -s",
     "lint": "jshint src/",
     "babel": "babel src/ -o dist/EmailValidatorPro.js",
@@ -14,10 +14,7 @@
   "homepage": "https://github.com/Grafluxe/email-validator-pro",
   "version": "1.0.0",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Grafluxe/email-validator-pro.git"
-  },
+  "repository": "Grafluxe/email-validator-pro.git",
   "keywords": [
     "Email validator",
     "Valid email",
@@ -27,9 +24,9 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "boxy-jsdoc-template": "^1.0.1",
     "jsdoc": "^3.4.3",
     "jshint": "^2.9.4",
-    "minami": "^1.1.1",
     "uglify-js": "^2.7.5"
   }
 }
