--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "jshint src/",
     "babel": "babel src/ -o dist/EmailValidatorPro.js",
     "minify": "uglifyjs dist/EmailValidatorPro.js -mco dist/EmailValidatorPro.min.js --preamble \"/*github.com/Grafluxe/email-validator-pro*/\"",
-    "doc": "jsdoc -c .jsdocrc"
+    "doc": "jsdoc -c .jsdocrc",
+    "test": "node test/runner"
   },
   "author": "Leandro Silva (http://grafluxe.com)",
   "homepage": "https://github.com/Grafluxe/email-validator-pro",
@@ -25,6 +26,8 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "boxy-jsdoc-template": "^1.0.1",
+    "jasmine": "^2.5.3",
+    "jasmine-pretty-html-reporter": "^0.2.5",
     "jsdoc": "^3.4.3",
     "jshint": "^2.9.4",
     "uglify-js": "^2.7.5"
